[package]
name = "pinocchio-mpl-utils"
version = "0.4.2"
edition = "2021"
description = "MPL Core Utils library"
authors = [
    "Metaplex Developers <dev@metaplex.com>",
    "ported to Pinocchio by <https://x.com/inspiration_gx>",
]

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"


[dependencies]
pinocchio = "0.9.2"
pinocchio-system = "0.3.0"
pinocchio-token = { version = "0.4.0" }
# pinocchio-token = { version = "0.4.0", optional = true }
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-log = "0.5.1"
pinocchio-associated-token-account = "0.2.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
# pinocchio-token-2022 = { version = "0.1.0", optional = true }
pinocchio-token-2022 = { version = "0.1.0" }


# [features]
# default = ["pinocchio-token"]
# spl-token = ["pinocchio-token-2022"]

[profile.release]
overflow-checks = true # Enable integer overflow checks.
